style/about.css
/* ... */
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.softSkills_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

/*  *********************** Coursework Tab *********************** */
.coursework_tab {
    padding: 2px;
    text-align: center;
    justify-content: center;
    border: 3px solid black;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    margin-left: 50%;
    margin-top: -11%;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .coursework_tab {
        width: 130px;
        height: 55px;
        font-size: 20px;
    }
}
@media screen and (min-width: 481px) {
    .coursework_tab {
        width: 270px;
        height: 40px;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.coursework_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

